# Edtech

./: Dockerfile.backend  Dockerfile.frontend  README.md  deploy.sh  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ai_ci.yml
geo-ai-system/: .gitignore  geography_edu.db  pyproject.toml  requirements.txt
geo-ai-system/agent/: question_generator.py
geo-ai-system/backend/: main.py
geo-ai-system/backend/app/models/: population.py
geo-ai-system/backend/app/repositories/: population_repository.py  vector_repository.py
geo-ai-system/chroma_db/: chroma.sqlite3
geo-ai-system/data/: census_population.csv
geo-ai-system/data/knowledge/: africa_population.md
geo-ai-system/scripts/: check_models.py  ingest_wikipedia.py  init_db.py  init_vector_db.py
geo-ai-system/ui/: app.py
tests/: test_ai_quality.py
